recursion.cons.nfirst.Nfirst.scala.error
Erreur de compilation :
Nfirst:6: error: not found: value rang
    if(rang > n-1){
       ^Nfirst:12: error: too many arguments for method nfirst_helper: (l: List[Int], n: Int)List[Int]
      return nfirst_helper(l.tail, n, rang+1);
                          ^Nfirst:18: error: too many arguments for method nfirst: (l: List[Int], n: Int)List[Int]
  return nfirst(l, n, 0);
               ^